--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ decorator==5.2.1
 -e git+https://github.com/Gregb26/ab-initio-electron-defect-interaction@d4d794e8fccb488526fff6dff5b28f4e957b05f1#egg=electron_defect_interaction
 executing==2.2.0
 fonttools==4.59.1
-h5py==3.14.0
+h5py==3.15.0
 idna==3.10
 ipykernel==6.30.1
 ipython==9.4.0
@@ -36,10 +36,10 @@ nest-asyncio==1.6.0
 netCDF4==1.7.2
 networkx==3.5
 numpy==1.26.4
-orjson==3.11.3
+# orjson==3.11.3 # optional, local only
 packaging==25.0
 palettable==3.3.3
-pandas==2.3.2
+pandas>=2.3.2
 parso==0.8.5
 pexpect==4.9.0
 phonopy==2.43.1
@@ -52,7 +52,7 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 PyDispatcher==2.0.7
 Pygments==2.19.2
-pymatgen==2025.6.14
+pymatgen>=2025.6.14
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
@@ -62,21 +62,21 @@ requests==2.32.5
 retrying==1.4.2
 ruamel.yaml==0.18.15
 ruamel.yaml.clib==0.2.12
-scipy==1.16.1
-seaborn==0.13.2
-setuptools==80.9.0
-six==1.17.0
-spglib==2.6.0
-stack-data==0.6.3
-symfc==1.5.4
-sympy==1.14.0
-tabulate==0.9.0
-tornado==6.5.2
-tqdm==4.67.1
-traitlets==5.14.3
-tzdata==2025.2
-tzlocal==5.3.1
-uncertainties==3.2.3
-urllib3==2.5.0
-wcwidth==0.2.13
-wheel==0.45.1
+scipy>=1.16.1
+seaborn>=0.13.2
+setuptools>=80.9.0
+six>=1.17.0
+spglib>=2.6.0
+stack-data>=0.6.3
+symfc>=1.5.4
+sympy>=1.14.0
+tabulate>=0.9.0
+tornado>=6.5.2
+tqdm>=4.67.1
+traitlets>=5.14.3
+tzdata>=2025.2
+tzlocal>=5.3.1
+uncertainties>=3.2.3
+urllib3>=2.5.0
+wcwidth>=0.2.13
+wheel>=0.45.1
